--- a/pynq/boot.ipynb
+++ b/pynq/boot.ipynb
@@ -5,7 +5,7 @@
    "id": "9c8dad08",
    "metadata": {},
    "source": [
-    "# ChiffonCore bring-up — Ultra96‑V2 / PYNQ\n",
+    "# ChiffonCore bring-up - Ultra96-V2 / PYNQ\n",
     "\n",
     "1. Load bitstream (Overlay)\n",
     "2. Write `.hex` to DRAM (CMA buffer)\n",
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "class LiveDisplayPort(DisplayPort):\n",
-    "    # Ultra96‑V2 DisplayPort registers\n",
+    "    # Ultra96-V2 DisplayPort registers\n",
     "    __DP_REG_BASE_ADDR__                    = 0xfd4a0000\n",
     "    __DP_REG_ADDR_RANGE__                   = 0x0000cc20\n",
     "    __RA_DP_MAIN_STREAM_ENABLE__            = 0x00000084\n",
