--- a/pynq/boot.ipynb
+++ b/pynq/boot.ipynb
@@ -60,6 +60,12 @@
     "# bring-up: 16-32 MiB\n",
     "RAM_BYTES = 16 * 1024 * 1024\n",
     "\n",
+    "# ---- simple filesystem (initramfs) ----\n",
+    "ENABLE_FS = True\n",
+    "FS_TYPE = \"tar\"  # 'tar' or 'none'\n",
+    "FS_PATH = \"rootfs.tar\"\n",
+    "FS_ALIGN = 0x1000\n",
+    "\n",
     "# ----  DisplayPort + graphics ----\n",
     "ENABLE_DISPLAYPORT = True\n",
     "ENABLE_GRAPHICS    = True  # allocate fb0/fb1 + write mailbox (+ bootinfo)\n",
