feat: bootinfo 送る

--- a/pynq/boot.ipynb
+++ b/pynq/boot.ipynb
@@ -305,6 +305,7 @@
     "    with open(elf_path, \"rb\") as f:\n",
     "        ef = ELFFile(f)\n",
     "        entry = int(ef.header[\"e_entry\"])\n",
+    "        max_end = 0\n",
     "        print(f\"ELF entry: 0x{entry:016x}\")\n",
     "        for seg in ef.iter_segments():\n",
     "            if seg.header.p_type != \"PT_LOAD\":\n",
@@ -313,12 +314,15 @@
     "            memsz = int(seg.header.p_memsz)\n",
     "            filesz = int(seg.header.p_filesz)\n",
     "            data = seg.data()\n",
+    "            end = vaddr + memsz\n",
+    "            if end > max_end:\n",
+    "                max_end = end\n",
     "            print(f\"  LOAD vaddr=0x{vaddr:016x} filesz=0x{filesz:x} memsz=0x{memsz:x}\")\n",
     "            img.write_bytes(vaddr, data)\n",
     "            if memsz > filesz:\n",
     "                img.write_bytes(vaddr + filesz, b\"\\x00\" * (memsz - filesz))\n",
     "    img.flush()\n",
-    "    return entry\n",
+    "    return entry, max_end\n",
     "\n",
     "def hexdump_cpu(img: CpuRamImage, cpu_addr: int, nbytes: int = 64):\n",
     "    off = cpu_addr - img.cpu_base\n",
@@ -329,11 +333,20 @@
     "        hx = \" \".join(f\"{b:02x}\" for b in chunk)\n",
     "        print(f\"0x{cpu_addr+i:08x}: {hx}\")\n",
     "\n",
+    "\n",
+    "def align_up(x: int, align: int) -> int:\n",
+    "    return (x + align - 1) & ~(align - 1)\n",
+    "\n",
+    "def align_down(x: int, align: int) -> int:\n",
+    "    return x & ~(align - 1)\n",
+    "\n",
     "# ---- BootInfo ----\n",
     "BOOTINFO_MAGIC = 0x43424F54  # 'CBOT'\n",
-    "BOOTINFO_VER   = 1\n",
+    "BOOTINFO_VER   = 2\n",
+    "FS_TYPE_TAR    = 1\n",
     "\n",
-    "def write_bootinfo(img: CpuRamImage, *, fb0_phys: int, fb1_phys: int, width: int, height: int, stride_bytes: int):\n",
+    "def write_bootinfo(img: CpuRamImage, *, fb0_phys: int, fb1_phys: int, width: int, height: int, stride_bytes: int,\n",
+    "                   fs_base: int = 0, fs_size: int = 0, fs_type: int = 0):\n",
     "    img.write_u32(BOOTINFO_CPU_ADDR + 0x00, BOOTINFO_MAGIC)\n",
     "    img.write_u32(BOOTINFO_CPU_ADDR + 0x04, BOOTINFO_VER)\n",
     "    img.write_u64(BOOTINFO_CPU_ADDR + 0x08, fb0_phys)\n",
@@ -344,7 +357,11 @@
     "    img.write_u32(BOOTINFO_CPU_ADDR + 0x24, 0)  # pixel_format: 0=RGBA8888\n",
     "    img.write_u64(BOOTINFO_CPU_ADDR + 0x28, 0x1001_0000)  # regbus_base\n",
     "    img.write_u64(BOOTINFO_CPU_ADDR + 0x30, MAILBOX_CPU_ADDR)\n",
-    "    img.flush()"
+    "    img.write_u64(BOOTINFO_CPU_ADDR + 0x38, fs_base)\n",
+    "    img.write_u64(BOOTINFO_CPU_ADDR + 0x40, fs_size)\n",
+    "    img.write_u32(BOOTINFO_CPU_ADDR + 0x48, fs_type)\n",
+    "    img.write_u32(BOOTINFO_CPU_ADDR + 0x4C, 0)\n",
+    "    img.flush()\n"
    ]
   },
   {
@@ -368,12 +385,30 @@
     "if IMAGE_TYPE == \"hex\":\n",
     "    entry_va, end_va = load_hex_into(img, IMAGE_PATH, CPU_RAM_BASE)\n",
     "elif IMAGE_TYPE == \"elf\":\n",
-    "    entry_va = load_elf_into(img, IMAGE_PATH)\n",
-    "    end_va = None\n",
+    "    entry_va, end_va = load_elf_into(img, IMAGE_PATH)\n",
     "else:\n",
     "    raise ValueError(\"IMAGE_TYPE must be 'hex' or 'elf'\")\n",
     "\n",
     "print(f\"entry virtual addr (CPU) = 0x{entry_va:016x}\")\n",
+    "\n",
+    "fs_base = 0\n",
+    "fs_size = 0\n",
+    "fs_type_id = 0\n",
+    "\n",
+    "if ENABLE_FS and FS_TYPE != \"none\":\n",
+    "    fs_bytes = Path(FS_PATH).read_bytes()\n",
+    "    fs_size = len(fs_bytes)\n",
+    "    fs_end = CPU_RAM_BASE + RAM_BYTES\n",
+    "    fs_base = align_down(fs_end - fs_size, FS_ALIGN)\n",
+    "    assert fs_base + fs_size <= fs_end\n",
+    "    assert fs_base >= CPU_RAM_BASE + 0x0000_4000\n",
+    "    img.write_bytes(fs_base, fs_bytes)\n",
+    "    img.flush()\n",
+    "    if FS_TYPE == \"tar\":\n",
+    "        fs_type_id = FS_TYPE_TAR\n",
+    "    print(f\"fs loaded: type={FS_TYPE} base=0x{fs_base:08x} size=0x{fs_size:x}\")\n",
+    "else:\n",
+    "    print(\"Skip filesystem init\")\n",
     "\n",
     "if end_va is not None and end_va > MAILBOX_CPU_ADDR:\n",
     "    print(\"WARNING: program image overlaps mailbox region in CPU address space.\")\n",
@@ -421,7 +456,8 @@
     "    # BootInfo (optional)\n",
     "    write_bootinfo(img, fb0_phys=fb0_phys, fb1_phys=fb1_phys,\n",
     "                   width=PIXEL_WIDTH, height=PIXEL_HEIGHT,\n",
-    "                   stride_bytes=PIXEL_WIDTH * PIXEL_CH)\n",
+    "                   stride_bytes=PIXEL_WIDTH * PIXEL_CH,\n",
+    "                   fs_base=fs_base, fs_size=fs_size, fs_type=fs_type_id)\n",
     "\n",
     "    print(f\"mailbox @ 0x{MAILBOX_CPU_ADDR:08x} written (fb0/fb1)\")\n",
     "    print(f\"bootinfo @ 0x{BOOTINFO_CPU_ADDR:08x} written (magic/version)\")\n",
@@ -475,7 +511,7 @@
    "outputs": [],
    "source": [
     "print(\"BootInfo dump:\")\n",
-    "hexdump_cpu(img, BOOTINFO_CPU_ADDR, 64)\n",
+    "hexdump_cpu(img, BOOTINFO_CPU_ADDR, 80)\n",
     "\n",
     "print(\"First 64 bytes of image:\")\n",
     "hexdump_cpu(img, CPU_RAM_BASE, 64)"
