--- a/pynq/boot.ipynb
+++ b/pynq/boot.ipynb
@@ -127,52 +127,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "from pynq import MMIO\n",
+    "from pynq.lib.video import *\n",
+    "\n",
     "class LiveDisplayPort(DisplayPort):\n",
-    "    # Ultra96-V2 DisplayPort registers\n",
+    "    # DisplayPort register parameters (Ultra96-V2)\n",
     "    __DP_REG_BASE_ADDR__                    = 0xfd4a0000\n",
     "    __DP_REG_ADDR_RANGE__                   = 0x0000cc20\n",
     "    __RA_DP_MAIN_STREAM_ENABLE__            = 0x00000084\n",
     "    __RA_V_BLEND_SET_GLOVAL_ALPHA_REG__     = 0x0000a00c\n",
     "    __RA_AV_BUF_OUTPUT_AUDIO_VIDEO_SELECT__ = 0x0000b070\n",
     "    __RA_AV_BUF_AUD_VID_CLK_SOURCE__        = 0x0000b120\n",
-    "    __RA_AV_BUF_SRST_REG__                  = 0x0000b140\n",
+    "    __RA_AV_BUF_SRST_REG__                  = 0x0000b124\n",
     "\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self._mmio = MMIO(self.__DP_REG_BASE_ADDR__, self.__DP_REG_ADDR_RANGE__)\n",
+    "    def __init__(self, event_loop=None):\n",
+    "        super().__init__(event_loop)\n",
     "\n",
-    "    def enable_mainstream(self):\n",
-    "        self._mmio.write(self.__RA_DP_MAIN_STREAM_ENABLE__, 0x1)\n",
+    "    def configure(self, mode, pixelformat):\n",
+    "        super().configure(mode, pixelformat)\n",
+    "        self.__setup_live_video__()\n",
     "\n",
-    "    def set_global_alpha(self, alpha: int = 0xFF):\n",
-    "        self._mmio.write(self.__RA_V_BLEND_SET_GLOVAL_ALPHA_REG__, alpha & 0xFF)\n",
-    "\n",
-    "    def select_video_output(self):\n",
-    "        self._mmio.write(self.__RA_AV_BUF_OUTPUT_AUDIO_VIDEO_SELECT__, 0x1)\n",
-    "\n",
-    "    def set_clock_source(self):\n",
-    "        self._mmio.write(self.__RA_AV_BUF_AUD_VID_CLK_SOURCE__, 0x1)\n",
-    "\n",
-    "    def reset_avbuf(self):\n",
-    "        self._mmio.write(self.__RA_AV_BUF_SRST_REG__, 0x1)\n",
-    "        time.sleep(0.01)\n",
-    "        self._mmio.write(self.__RA_AV_BUF_SRST_REG__, 0x0)\n",
-    "\n",
-    "def enable_displayport(width: int, height: int) -> LiveDisplayPort:\n",
-    "    lvdp = LiveDisplayPort()\n",
-    "    lvdp.reset_avbuf()\n",
-    "    lvdp.select_video_output()\n",
-    "    lvdp.set_clock_source()\n",
-    "    lvdp.set_global_alpha(0xFF)\n",
-    "    lvdp.enable_mainstream()\n",
-    "    lvdp.configure(VideoMode(width, height, 24), PIXEL_RGB)\n",
-    "    return lvdp\n",
+    "    def __setup_live_video__(self):\n",
+    "        dpreg = MMIO(self.__DP_REG_BASE_ADDR__, self.__DP_REG_ADDR_RANGE__)\n",
+    "        dpreg.write(self.__RA_DP_MAIN_STREAM_ENABLE__, 0x00000000)\n",
+    "        dpreg.write(self.__RA_V_BLEND_SET_GLOVAL_ALPHA_REG__, 0x00000000)\n",
+    "        dpreg.write(self.__RA_AV_BUF_OUTPUT_AUDIO_VIDEO_SELECT__, 0x00000050)\n",
+    "        dpreg.write(self.__RA_AV_BUF_AUD_VID_CLK_SOURCE__, 0x00000002)\n",
+    "        dpreg.write(self.__RA_AV_BUF_SRST_REG__, 0x00000002)\n",
+    "        time.sleep(1)\n",
+    "        dpreg.write(self.__RA_AV_BUF_SRST_REG__, 0x00000000)\n",
+    "        time.sleep(1)\n",
+    "        dpreg.write(self.__RA_DP_MAIN_STREAM_ENABLE__, 0x00000001)\n",
     "\n",
     "if ENABLE_DISPLAYPORT:\n",
-    "    lvdp = enable_displayport(PIXEL_WIDTH, PIXEL_HEIGHT)\n",
+    "    lvdp = LiveDisplayPort()\n",
+    "    lvdp.configure(VideoMode(PIXEL_WIDTH, PIXEL_HEIGHT, 24), PIXEL_RGB)\n",
     "    print(\"DisplayPort configured:\", PIXEL_WIDTH, PIXEL_HEIGHT)\n",
     "else:\n",
-    "    print(\"Skip DisplayPort config (headless)\")"
+    "    print(\"Skip DisplayPort config (headless)\")\n"
    ]
   },
   {
@@ -485,14 +478,17 @@
    "source": [
     "# 1) Hold reset\n",
     "hold_reset(True)\n",
+    "time.sleep(0.01)\n",
     "show_status()\n",
     "\n",
     "# 2) Configure mapping (dram_base is additional offset; usually 0)\n",
     "set_ram_mapping(dram_base=0x0000_0000, ram_phys_base=img.phys_base)\n",
+    "time.sleep(0.01)\n",
     "\n",
     "# 3) START (release reset + run)\n",
     "start_cpu()\n",
-    "show_status()"
+    "time.sleep(0.01)\n",
+    "show_status()\n"
    ]
   },
   {
