--- a/pynq/boot.ipynb
+++ b/pynq/boot.ipynb
@@ -53,8 +53,8 @@
     "\n",
     "# ---- CPU memory map (virtual) ----\n",
     "CPU_RAM_BASE      = 0x8000_0000\n",
-    "MAILBOX_CPU_ADDR  = 0x8000_2000  # u64[2] : fb0_phys, fb1_phys\n",
-    "BOOTINFO_CPU_ADDR = 0x8000_1000  # optional (versioned boot info)\n",
+    "MAILBOX_CPU_ADDR  = 0x803F_0000  # u64[2] : fb0_phys, fb1_phys\n",
+    "BOOTINFO_CPU_ADDR = 0x803F_1000  # optional (versioned boot info)\n",
     "\n",
     "# ---- allocate CPU RAM backing store (CMA contiguous) ----\n",
     "# bring-up: 16-32 MiB\n",
@@ -276,7 +276,7 @@
     "    buf[:] = 0\n",
     "    buf.flush()\n",
     "    img = CpuRamImage(cpu_base=cpu_base, buf_u64=buf, ram_bytes=ram_bytes)\n",
-    "    assert img.phys_base <= 0xFFFF_FFFF, \"AXI_ADDR_WIDTH=32 の場合 4GB 超は不可\"\n",
+    "    assert img.phys_base <= 0xFFFF_FFFF, \"4GB is NG when AXI_ADDR_WIDTH=32\"\n",
     "    return img\n",
     "\n",
     "def load_hex_into(img: CpuRamImage, hex_path: str, load_addr: int):\n",
